--- a/front/my-todo/src/index.css
+++ b/front/my-todo/src/index.css
@@ -5,27 +5,28 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
+  min-height: 100%;
 }
 
 #root {
   min-height: 100%;
 }
 
-/*
-  추후 회원 인증페이지에서 배경화면을 페이지의 전체 영역에 채우기 위한 용도
-*/
+/*추후 회원 인증 페이지에서 배경화면을 페이지의 전체 영역에 채우기 위한 용도*/
 html {
   height: 100%;
 }
 
-/*링크의 색상 및 밑줄 없애기*/
+/* 링크의 색상 및 밑줄 없애기*/
 a {
   color: inherit;
   text-decoration: none;
 }
 
+/* 모든 엘리먼트의 box-sizing 값을 border-box로 설정*/
 * {
-  box-sizing: inherit; /*모든 엘리먼트의 box-sizing을 border-box로 설정;*/
+  box-sizing: inherit;
 }
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
